--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-* {
+body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #1a1a1c;
-  color: #fff;
+  color: #e4e4e4;
 }
 
 .coin-app {
@@ -14,7 +14,6 @@
   flex-direction: column;
   align-items: center;
   margin-top: 64px;
-  color: #fff;
 }
 
 .coin-search {
@@ -58,7 +57,7 @@
   text-align: center;
 }
 
-table, th, td {
+body table, th, td {
   border: 1px solid white;
 }
 
@@ -72,4 +71,9 @@ table, th, td {
 
 nav {
   text-align: center;
+}
+
+.white-content {
+  background: #e4e4e4;
+  color: black;
 }
