--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
 
 .coin-search {
   margin-bottom: 64px;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-content: center;
@@ -78,7 +78,7 @@ nav {
 
 .white-content {
   background: #e4e4e4;
-  color: black;
+  color: #1a1a1c;
 }
 a {
   color: #FFF;
@@ -96,7 +96,7 @@ a:hover {
 }
 
 .white-content .link {
-  color: black;
+  color: #1a1a1c;
 }
 
 .white-content .link:hover {
@@ -112,18 +112,25 @@ a:hover {
 }
 
 .coin-container {
-  text-align: center;
   max-width: 960px;
   margin: 0 auto;
 }
 
+.current-price {
+  text-align: left;
+}
+
 .current-price p {
   display: inline-block;
-  margin: 10px;
+  margin: 0 10px 0 0;
 }
 
 .color-background {
-  background-color: rgb(59, 52, 52);
+  background-color: #1a1a1c;
+}
+
+.color-background p {
+  text-align: left;
 }
 
 .dropdown-item {
@@ -142,5 +149,33 @@ a:hover {
 
 .MuiTable-root {
   background-color: #1a1a1c;
-  color: white;
+}
+
+.white-content .MuiTable-root {
+  background-color: #e4e4e4;
+}
+
+.white-content .MuiTableCell-root {
+  color: #1a1a1c;
+  border: 1px solid #1a1a1c;
+}
+
+.white-content a {
+  color: #1a1a1c;
+}
+
+.white-content .MuiButtonBase-root {
+  color: #1a1a1c;
+}
+
+.white-content .color-background {
+  background-color: #e4e4e4;
+}
+
+.CoinPageTable {
+  display: inline-block;
+}
+
+.image-name {
+  display: block ruby;
 }
