--- a/src/App.css
+++ b/src/App.css
@@ -184,3 +184,8 @@ a:hover {
   height: 25px;
   display: inline-block;
 }
+
+.inline-table-text {
+  display: inline-block;
+  margin: 0 50px 0 0;
+}
