--- a/src/App.css
+++ b/src/App.css
@@ -189,3 +189,12 @@ a:hover {
   display: inline-block;
   margin: 0 50px 0 0;
 }
+
+.navbar-left {
+  text-align: left;
+}
+
+.navbar-left p {
+  display: inline-block;
+  margin: 0 30px 0 0;
+}
