--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ table, th, td {
 }
 
 nav {
-  text-align: right;
+  display: flex;
 }
 
 .white-content {
@@ -127,6 +127,7 @@ a:hover {
 
 .color-background {
   background-color: #1a1a1c;
+  margin: 50px 0 0 0;
 }
 
 .color-background p {
@@ -180,18 +181,23 @@ a:hover {
   display: block ruby;
 }
 
-.image-table {
-  height: 25px;
-  display: inline-block;
-}
-
 .inline-table-text {
   display: inline-block;
   margin: 0 50px 0 0;
 }
 
-.navbar-left {
-  text-align: left;
+.image-table {
+  height: 25px;
+  display: inline-block;
+}
+
+.left-area p {
+  display: inline-block;
+  margin: 0 50px 0 0;
+}
+
+.right-area {
+  margin: 7px 0 0 470px;
 }
 
 .navbar-left p {
