--- a/src/App.css
+++ b/src/App.css
@@ -111,10 +111,6 @@ a:hover {
   display: block;
 }
 
-.all-time {
-  text-align: center;
-}
-
 .coin-container {
   max-width: 960px;
   margin: 0 auto;
@@ -131,7 +127,7 @@ a:hover {
 
 .color-background {
   background-color: #1a1a1c;
-  margin: 100px 0 0 0;
+  margin: 50px 0 0 0;
 }
 
 .color-background p {
@@ -185,11 +181,6 @@ a:hover {
   display: inline-block;
 }
 
-.inline-table-text {
-  display: inline-block;
-  margin: 0 50px 0 0;
-}
-
 .twenty-four-change p {
   display: inline-block;
   margin: 0 15px 0 0;
@@ -212,4 +203,22 @@ a:hover {
 .navbar-left p {
   display: inline-block;
   margin: 0 30px 0 0;
+}
+
+.title-coin {
+  text-align: center;
+}
+
+.text-box {
+  width: 100%;
+  margin: 0 0 30px 0;
+}
+
+.next-to {
+  display: inline-block;
+  width: 50%;
+}
+
+.hidden {
+  visibility: hidden;
 }
