--- a/src/App.css
+++ b/src/App.css
@@ -92,11 +92,11 @@ a:hover {
   color: white;
 }
 .link:hover {
-   color: #00F
+   color: #1976d2
 }
 
 .blue {
-  color: rgba(59,130,246);
+  color: #1976d2;
 }
 
 .white-content .link {
@@ -104,7 +104,7 @@ a:hover {
 }
 
 .white-content .link:hover {
-  color: #00F
+  color: #1976d2
 }
 
 .chart__container {
@@ -144,7 +144,7 @@ a:hover {
 
 .dropdown-menu.show {
   display: block;
-  background-color: blue;
+  background-color: #1976d2;
   text-align: center;
 }
 
