--- a/src/components/Authentication/Dashboard.css
+++ b/src/components/Authentication/Dashboard.css
@@ -1,27 +1,11 @@
-.dashboard {
-    height: 30vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.dashboard__container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #dcdcdc;
-    padding: 30px;
-}
-
-.dashboard__btn {
+/* .dashboard__btn {
     padding: 10px;
     font-size: 18px;
     margin-top: 10px;
     border: none;
     color: white;
     background-color: black;
-}
+} */
 
 .dashboard div {
     margin-top: 7px;
@@ -29,4 +13,8 @@
 
 .profile-name {
     text-align: center;
+}
+
+.favourites {
+    margin: 0 0 50px 0;
 }
