--- a/src/components/Authentication/Reset.css
+++ b/src/components/Authentication/Reset.css
@@ -1,5 +1,5 @@
 .reset {
-    height: 100vh;
+    height: 60vh;
     width: 100vw;
     display: flex;
     align-items: center;
@@ -28,6 +28,11 @@
     color: white;
     background-color: black;
 }
+
+.no_account {
+    color: black;
+}
+
 
 .reset div {
     margin-top: 7px;
