--- a/src/App.css
+++ b/src/App.css
@@ -189,11 +189,19 @@ p {
   display: inline;
   margin-right: 0.5em;
 }
+@media only screen and (min-width: 600px) {
+  .image-table {
+    height: 25px;
+    margin-right: 0.5em;
+    vertical-align: middle;
+  }
+}
 
-.image-table {
-  height: 25px;
-  margin-right: 0.5em;
-  vertical-align: middle;
+@media only screen and (max-width: 500px) {
+  .image-table {
+    height: 25px;
+    vertical-align: middle;
+  }
 }
 
 .right-area {
