--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
-  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   background-color: #1a1a1c;
 }
 
-.coin-app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.coin-input {
-  width: 300px;
-  border-radius: 4px;
-  background-image: linear-gradient(
-    -225deg,
-    #1c1c1c 20%,
-    #1976d2 48%,
-    #e2e2e2 90%
-  );
-}
-
-.coin-input::placeholder {
+/* .coin-input::placeholder {
   color: #e2e2e2;
-}
+} */
 
-.imageID {
+/* .imageID {
   height: 20px;
-}
-
-.headers {
-  text-align: center;
-}
+} */
 
 table, th, td {
   border: 1px solid white;
-}
-
-.CoinPageTable td {
-  display: inline-block;
 }
 
 .text-success {
@@ -51,16 +25,9 @@ table, th, td {
   color: red;
 }
 
-/* nav {
-  display: flex;
-} */
-
 .white-content {
   background: #e4e4e4;
   color: #1a1a1c;
-}
-a {
-  color: #FFF;
 }
 
 a:hover {
@@ -228,9 +195,9 @@ p {
   margin: 0 0 30px 0;
 }
 
-.next-to {
-  display: inline-block;
-  width: 50%;
+.text-box span {
+  color: #ffffff;
+  margin-left: 0.3em;
 }
 
 .hidden {
@@ -266,12 +233,7 @@ p {
   color: #e2e2e2;
 }
 
-.investment-box {
-  margin: 0 auto;
-  margin-bottom: 2em;
-  padding: 0.5em;
-  background-color: #36393F;
-  border-radius: 15px;
-  text-align: center;
-  max-width: 20em;
+.total-coin-info-container {
+  display: flex;
+  font-size: 12px;
 }
